--- a/hw1-narrative/page3.html
+++ b/hw1-narrative/page3.html
@@ -1,17 +1,45 @@
 <!DOCTYPE html>
 <html>
-<head></head>
-<body>
-      <h1>Narrative Homework Page 2</h1>
-      <a href="page2.html">page 2</a>
+<br>
+  <head></head>
+<style>
+  body {
+  background-color: yellow;
+}
+</style>
+      <body> <div width="900" align="center">
+      <h1 align="center">SNEAKY
 
+        <style
+          type="text/css">
+          h1, h2 {
+            font-family: Helvetica, Verdana, sans-serif;}
+</style>
+        </h1>
+        <a
 
+          href="page4.html"
+          >YIKES, ANOTHA ONE
+        </a>
+      <style>
+       a {
+  color: red;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: Helvetica;
+}</style>
+<br>
+<br>
+    </body>
+    <img
+    src="images/sneaky.jpg" width="500" alt=”sneaky” class=center>
 
-</body>
-
-
-
-
-
+    <style>.center {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 50%;
+      }
+</img>
 
 </html>
