--- a/hw1-narrative/page4.html
+++ b/hw1-narrative/page4.html
@@ -8,7 +8,7 @@
 }
 </style>
       <body> <div width="900" align="center">
-      <h1 align="center">SLEEPY
+      <h1 align="center">SOCIAL
 
         <style
           type="text/css">
@@ -18,8 +18,8 @@
         </h1>
         <a
 
-          href="page3.html"
-          >SHE'S GORGEOUS
+          href="page5.html"
+          >BOW DOWN PEASANTS 
         </a>
       <style>
        a {
@@ -32,7 +32,7 @@
 <br>
     </body>
     <img
-    src="images/sleepy.jpg" width="500" alt=”sleepy” class=center>
+    src="images/social.jpg" width="500" alt=”social” class=center>
 
     <style>.center {
       display: block;
