--- a/in-class-demos/typography.html
+++ b/in-class-demos/typography.html
@@ -1,1 +1,14 @@
 <!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>HEY!</title>
+    <link href="https://fonts.googleapis.com/css?family=Prompt:500|Tomorrow:200,600&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+  <h1> Hey hey hey </h1>
+  <p>This is a paragraph</p>
+  <blockquote> Go crazy<blockquote/>
+  </body>
+</html>
