--- a/homework/hw2-multicol/index.html
+++ b/homework/hw2-multicol/index.html
@@ -9,26 +9,18 @@
   <title>Document</title>
 </head>
 <body class="grid-demo">
-  <h1>CSS Grid Demo</h1>
+  <h1>Dumb Trump Quotes</h1>
   <section>
-    <div class='feature'> Lorem ipsum dolor sit amet,
-      consectetur adipisicing elit.
-      Ipsum magni cum quas suscipit velit, nobis,
-      dolores consectetur molestias commodi ad.
+    <div class='feature'> "It has not been easy for me. And, you know, I started off in Brooklyn. My father gave me a small loan of a million dollars."
     </div>
 
-<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-  Accusantium tempora quo minus fugiat,
-  alias ipsum asperiores voluptatibus odio, enim officia.</div>
-<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-  Accusantium tempora quo minus fugiat,
-  alias ipsum asperiores voluptatibus odio, enim officia.</div>
-<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-  Accusantium tempora quo minus fugiat,
-  alias ipsum asperiores voluptatibus odio, enim officia.</div>
-<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-  Accusantium tempora quo minus fugiat,
-  alias ipsum asperiores voluptatibus odio, enim officia.</div>
+<div>
+"We're rounding 'em up in a very humane way, in a very nice way. And they're going to be happy because they want to be legalized. And, by the way, I know it doesn't sound nice. But not everything is nice."</div>
+<div>
+"I will be phenomenal to the women. I mean, I want to help women."</div>
+<div>"It's really cold outside, they are calling it a major freeze, weeks ahead of normal. Man, we could use a big fat dose of global warming!"</div>
+<div>"I'm also honored to have the greatest temperament that anybody has."</div>
+<div>"Under the normal rules, I'll be out in 2024 so we may have to go for an extra term."
 
 
   </section>
