--- a/homework/hw2-multicol/index.html
+++ b/homework/hw2-multicol/index.html
@@ -10,13 +10,15 @@
 </head>
 <body class="grid-demo">
   <h1>Dumb Trump Quotes</h1>
+
   <section>
     <div class='feature'> "It has not been easy for me. And, you know, I started off in Brooklyn. My father gave me a small loan of a million dollars."
     </div>
 
 <div>
+
 "We're rounding 'em up in a very humane way, in a very nice way. And they're going to be happy because they want to be legalized. And, by the way, I know it doesn't sound nice. But not everything is nice."</div>
-<div>
+<div>(ON HELPING WOMEN)
 "I will be phenomenal to the women. I mean, I want to help women."</div>
 <div>"It's really cold outside, they are calling it a major freeze, weeks ahead of normal. Man, we could use a big fat dose of global warming!"</div>
 <div>"I'm also honored to have the greatest temperament that anybody has."</div>
