--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 			<!-- ul stands for unordered list-->
 			<ul>
 				<!-- li stands for list item-->
-				<li><a href="#">Homework One - Name of my project</a></li>
-				<li><a href="#">Homework Two - Name of my homework</a></li>
-				<li><a href="#">Homework Three - Name of my homework</a></li>
+				<li><a href="https://maddiecollet.github.io/homework/hw1-narrative/index.html">Homework One - The Five Moods of Cashew</a></li>
+				<li><a href="https://maddiecollet.github.io/homework/hw2-multicol/index.html">Homework Two - Dumb Trump Quotes</a></li>
+				<li><a href="file:///Users/maddiecollet/Documents/GitHub/maddiecollet.github.io/homework/hw4-animation/index.html">Homework Three - Sunset Animation</a></li>
 			</ul>
 		</section>
 		<aside>
